README for xaos.tools.